--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
+
 <html lang='en'>
 
 <head>
     <meta charset='UTF-8' />
-    <link href='/src/images/svg/logo.svg' rel='icon' type='image/svg+xml' />
+    <link href='/src/images/svg/logo.png' rel='icon' type='image/svg+xml' />
     <meta content='width=device-width, initial-scale=1.0,user-scalable=no' name='viewport' />
-    <title>模板</title>
+    <title><%- title %></title>
 </head>
 
 <body>
 <div id='root'></div>
-<script src='/src/main.tsx' type='module'></script>
+<%- injectScript %>
 </body>
 
 </html>
