feat(view): initial

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 
 <head>
-    <meta charset='UTF-8' />
-    <link href='/src/images/svg/logo.png' rel='icon' type='image/svg+xml' />
-    <meta content='width=device-width, initial-scale=1.0,user-scalable=no' name='viewport' />
-    <title><%- title %></title>
+  <meta charset="UTF-8" />
+  <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <meta content="width=device-width, initial-scale=1.0,user-scalable=no" name="viewport" />
+  <title><%- title %></title>
 </head>
 
 <body>
-<div id='root'></div>
+<div id="root"></div>
 <%- injectScript %>
 </body>
 
