feat(view): 框架重构优化

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <meta content="width=device-width, initial-scale=1.0,user-scalable=no" name="viewport" />
-  <title><%- title %></title>
+    <meta charset="UTF-8"/>
+    <link href="/src/images/common/favicon.svg" rel="shortcut icon" type="image/x-icon">
+    <meta content="width=device-width, initial-scale=1.0,user-scalable=no" name="viewport"/>
+    <title><%- title %></title>
 </head>
 
 <body>
