--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link href="/src/images/common/favicon.svg" rel="shortcut icon" type="image/x-icon">
+    <link href="/favicon.svg" rel="shortcut icon" type="image/x-icon">
     <meta content="width=device-width, initial-scale=1.0,user-scalable=no" name="viewport"/>
     <title><%- title %></title>
 </head>
